updated build config

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://kingsley:12345@localhost:5434/commerce_db?schema=public"
+DATABASE_URL="postgres://kingsley:g4gO1ysalA4lIdpT1wAkKpWa0EuvQPcx@dpg-ci0veg02qv21rs5h0rn0-a.oregon-postgres.render.com/commerce_db_t9ko"
 REFRESH_JWT = "I AM THE RFRESH SECRET AND I AM PRETTY MUCH HIDDEN"
 ACCESS_JWT="I AM THE SEECRET WE WILL USE TO GENEERATE YOUR ACCESS TOKEN"
+
+# postgres://kingsley:g4gO1ysalA4lIdpT1wAkKpWa0EuvQPcx@dpg-ci0veg02qv21rs5h0rn0-a/commerce_db_t9ko
